# deliberatively

./: .gitignore  CNAME  README.md  asset-manifest.json  craco.config.js  index.html  package-lock.json  package.json  tsconfig.json
public/: index.html  manifest.json
rust/deliberatively/: Cargo.toml  README.md
rust/solana-deliberatively/: Cargo.toml
rust/solana-deliberatively/src/: errors.rs  processor.rs  program_state.rs
rust/solana-deliberatively/src/processor/: init_vote_market.rs  participate_vote_market.rs  propose_vote_alternative.rs
rust/solana-deliberatively/src/program_state/: vote_alternative.rs  vote_participant.rs
src/: App.tsx  AppContainer.tsx  Routes.tsx  index.css  index.tsx  manifest.json  theme.ts
src/components/: AppDrawer.tsx  AppToolbar.tsx  Container.tsx  Copyright.tsx  Explanation.tsx  VoteMarketsList.tsx
src/context/: InitVoteMarket.tsx  VoteMarket.tsx  VoteMarketForm.tsx
src/contract/: constants.ts  utils.ts
src/hooks/: useInitVoteMarket.ts  useInitVoteMarketContext.ts  useStorageState.ts  useVoteMarketContext.ts  useVoteMarketFormContext.ts
src/models/: VoteAlternative.ts  VoteMarket.ts  VoteParticipant.ts
src/routes/: Contribute.tsx  Home.tsx  InvalidVoteMarketAddress.tsx  Mint.tsx  PageNotFound.tsx  Participate.tsx  ProposeAlternative.tsx  VoteMarket.tsx
src/utils/: constants.ts  db.ts  functions.ts  test_data.ts  validators.ts  web3.ts
static/js/: 2.9c86281c.chunk.js.LICENSE.txt  2.a8ba3ef8.chunk.js  3.2ebc390e.chunk.js  3.2ebc390e.chunk.js.map  4.62a5300e.chunk.js  4.62a5300e.chunk.js.map  6.11977116.chunk.js  (+5 more)
(+47 files in other folders)
