[package]
name = "deliberatively"
version = "0.1.3"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.12"
solana-program = "1.8.1"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.29"

# [features]
# test-bpf = ["solana-validator"]

# [dev-dependencies]
# assert_matches = "1.4.0"
# solana-program-test = "1.7.12"
# solana-sdk = "1.7.12"
# solana-validator = { version = "1.7.12" }

[lib]
crate-type = ["cdylib", "lib"]
